# api-hub-example/src/main/java/co/altir/example/model/organization/Organization.java
@@ -1,6 +1,7 @@
 package co.altir.example.model.organization;
 
 import co.altir.dbmanagement.dataaccess.openapidsl.schema.annotations.DslJpaEntity;
+import co.altir.dbmanagement.dataaccess.openapidsl.schema.annotations.DslRequired;
 import co.altir.example.model.common.BaseAuditFields;
 import java.util.List;
 import java.util.UUID;
@@ -15,11 +16,11 @@ public class Organization extends BaseAuditFields {
 
   private UUID id;
 
-  private String name;
+  @DslRequired() private String name;
 
-  private String address;
+  @DslRequired() private String address;
 
   private String country;
 
-  private List<Employee> employees;
+  @DslRequired() private List<Employee> employees;
 }
