# api-hub-example/src/main/java/co/altir/example/model/organization/User.java
@@ -1,6 +1,8 @@
 package co.altir.example.model.organization;
 
 import co.altir.dbmanagement.dataaccess.openapidsl.schema.annotations.DslJpaEntity;
+import co.altir.dbmanagement.dataaccess.openapidsl.schema.annotations.DslRequired;
+import co.altir.example.model.common.BaseAuditFields;
 import java.util.UUID;
 import lombok.Data;
 import lombok.experimental.Accessors;
@@ -9,17 +11,23 @@ import lombok.experimental.Accessors;
 @Accessors(chain = true)
 @Data
 @DslJpaEntity("users")
-public class User {
+public class User extends BaseAuditFields {
 
   private UUID id;
 
-  private String name;
+  @DslRequired() private String name;
 
-  private String email;
+  @DslRequired() private String email;
 
-  private String phone;
+  @DslRequired() private String phone;
 
   private String address;
 
   private String country;
+
+  /**
+   * Keycloak User ID - Links this user to a Keycloak identity This is the "sub" claim from the JWT
+   * token
+   */
+  private String keycloakUserId;
 }
